--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -2,7 +2,7 @@
 # rellic-unittest
 #
 
-set(RELLIC_UNITTEST ${PROJECT_NAME}-unittest-${RELLIC_LLVM_VERSION})
+set(RELLIC_UNITTEST ${PROJECT_NAME}-unittest)
 
 add_executable(${RELLIC_UNITTEST}
   AST/ASTBuilder.cpp
@@ -12,10 +12,9 @@ add_executable(${RELLIC_UNITTEST}
   UnitTest.cpp
 )
 
-add_project_properties(${RELLIC_UNITTEST})
-
 target_link_libraries(${RELLIC_UNITTEST} PRIVATE
-    ${PROJECT_NAME}
+    "${PROJECT_NAME}_cxx_settings"
+    "${PROJECT_NAME}"
     thirdparty_doctest
 )
 
