Add struct layout extraction tool (#199)
* Begin work on struct layout generation

* Fix alignment

* Handle bitfields

* Add unit tests for ASTBuilder

* Add tests

* Fix size check

* Refactor

* Fix name generation, add API to extract accessors

* Add test

* Refactor debug info inspection

* Disable debug log

* Fix static members alignment

* Fix recursive struct inspection

* Add `multiple_bases` test

* Fix empty base class issue

* Fix recursion bug

* Fix base class inspection

* Rename layoutgen to headergen

* Add unit tests

* Generate function prototypes as well

* Fix char generation

* Begin emit enums, fix struct align

* Fix DW_TAG_unspecified_type handling

* Some bugfixes

* Fix forward declarations, add test

* Rework offset computation

* Fix struct size

* Add tests

* Improve handling of forward declarations

* Fix indentation

* Rename map type

* Add test & bugfix

* Add test

* Begin reworking type inspection order

* Fix type inspection

* Fix type order generation

* Improve undefined types handling

* Fix enum generation

* Allow disabling prototype generation

* Fix `atomic`

* Add test

* WIP: avoid making all structs packed

* Fix field embedding

* Fix offset checking

* Do not forward declare enums
Enums cannot be forward declared in standard C

* Fix formatting

* Fix array size truncation

* Don't generate enums when base is incompatible

* Modifies CMake to always use vcpkg, optionally have an install target… (#207)

* Modifies CMake to always use vcpkg, optionally have an install target, and then install the libraries and headers when enabled

* Whoops

* Fix bug in rellic

* Address feedback from frabert

* Address PR review

* Uppercase LLVM

* Remove macro in favor of a cxx settings interface library

* Convert conditions into boolean expressions

* Fix CI

Co-authored-by: Francesco Bertolaccini <francesco.bert

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,40 +1,68 @@
 #
+# Copyright (c) 2020-present, Trail of Bits, Inc.
+# All rights reserved.
+#
+# This source code is licensed in accordance with the terms specified in
+# the LICENSE file found in the root directory of this source tree.
+#
+
+#
 # rellic-decomp
 #
 
-set(RELLIC_DECOMP ${PROJECT_NAME}-decomp-${RELLIC_LLVM_VERSION})
+set(RELLIC_DECOMP "${PROJECT_NAME}-decomp")
 
 add_executable(${RELLIC_DECOMP}
-  decomp/Decomp.cpp
+  "decomp/Decomp.cpp"
 )
 
-target_link_libraries(${RELLIC_DECOMP} PRIVATE ${PROJECT_NAME})
-add_project_properties(${RELLIC_DECOMP})
+target_link_libraries(${RELLIC_DECOMP}
+  PRIVATE
+    "${PROJECT_NAME}_cxx_settings"
+    "${PROJECT_NAME}"
+    gflags::gflags
+)
 
-set(RELLIC_DECOMP ${RELLIC_DECOMP} PARENT_SCOPE)
-
-install(TARGETS ${RELLIC_DECOMP} DESTINATION "bin")
+set(RELLIC_DECOMP "${RELLIC_DECOMP}" PARENT_SCOPE)
 
 #
 # rellic-headergen
 #
 
-set(RELLIC_HEADERGEN ${PROJECT_NAME}-headergen-${RELLIC_LLVM_VERSION})
+set(RELLIC_HEADERGEN "${PROJECT_NAME}-headergen")
 
 add_executable(${RELLIC_HEADERGEN}
-  headergen/HeaderGen.cpp
+  "headergen/HeaderGen.cpp"
 )
 
-target_link_libraries(${RELLIC_HEADERGEN} PRIVATE ${PROJECT_NAME})
-add_project_properties(${RELLIC_HEADERGEN})
-
-install(TARGETS ${RELLIC_HEADERGEN} DESTINATION "bin")
-
-#
-# IDA UI plugin
-#
-
-install(
-  FILES "${CMAKE_CURRENT_SOURCE_DIR}/plugins/ida-rellic.py"
-  DESTINATION "share/rellic"
+target_link_libraries(${RELLIC_HEADERGEN}
+  PRIVATE
+    "${PROJECT_NAME}_cxx_settings"
+    "${PROJECT_NAME}"
+    gflags::gflags
 )
+
+set(RELLIC_HEADERGEN "${RELLIC_HEADERGEN}" PARENT_SCOPE)
+
+if(RELLIC_ENABLE_INSTALL)
+  
+  install(
+    TARGETS
+      ${RELLIC_DECOMP}
+      ${RELLIC_HEADERGEN}
+    EXPORT
+      "${PROJECT_NAME}Targets"
+    RUNTIME
+      DESTINATION
+        "bin"
+  )
+  
+  #
+  # IDA UI plugin
+  #
+  install(
+    FILES "${CMAKE_CURRENT_SOURCE_DIR}/plugins/ida-rellic.py"
+    DESTINATION "share/rellic"
+  )
+
+endif(RELLIC_ENABLE_INSTALL)
