Update to LLVM 13 (#231)
* Update to LLVM 13

* Update CI

* Fix stopping logic

* Fix CI

* Fix anghabench compiler

* Fix CI

* Various updates to LLVM 12 mentions

* Fix fixpoint stopping

* Update mentioned CMake

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           - { name: 'ubuntu', tag: '18.04' }
           - { name: 'ubuntu', tag: '20.04' }
         llvm: [
-          '12'
+          '13'
           ]
 
     runs-on: ubuntu-20.04
@@ -44,6 +44,9 @@ jobs:
         shell: bash
         run: |
           # TODO some of these should probably live in the Docker build image
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
+          echo "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-13 main" >> /etc/apt/sources.list
+          echo "deb-src http://apt.llvm.org/focal/ llvm-toolchain-focal-13 main" >> /etc/apt/sources.list
           apt-get update
           apt-get install -y pixz xz-utils make rpm python3.8
           update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 100
@@ -88,8 +91,8 @@ jobs:
         run: |
           rellic-decomp --version
 
-      - name: Run Integration Tests (AnghaBench 1K, LLVM 12)
-        if: ${{ matrix.llvm == '12' && matrix.image.tag == '20.04' }}
+      - name: Run Integration Tests (AnghaBench 1K, LLVM 13)
+        if: ${{ matrix.llvm == '13' && matrix.image.tag == '20.04' }}
         shell: bash
         run: |
           apt-get install -y clang-${{ matrix.llvm }}
@@ -123,7 +126,7 @@ jobs:
           'macos-11'
           ]
         llvm: [
-          '12'
+          '13'
           ]
 
     runs-on: ${{ matrix.os }}
@@ -247,7 +250,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        llvm: ["12"]
+        llvm: ["13"]
         ubuntu: ["18.04"]
     steps:
     - uses: actions/checkout@v2
